--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 <header>
   <div class="logo-container">
-    <img src="image/smknew.png" alt="Logo SMKN 10" class="logo">
+    <img src="smknew.png" alt="Logo SMKN 10" class="logo">
     <h1>SMKN 10 Semarang</h1>
   </div>
   <div class="hamburger" onclick="toggleMenu()">☰</div>
@@ -296,4 +296,5 @@
 </script>
 
 </body>
+
 </html>
