--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 <section class="articles">
 
   <div class="card">
-    <img src="image/waka1.jpeg" alt="Kesiswaan">
+    <img src="waka1.jpeg" alt="Kesiswaan">
     <div class="card-content">
       <h3>Tugas Utama Wakil Kepala Sekolah Bidang Kesiswaan</h3>
       <p>Menjelaskan peran utama Wakil Kepala Sekolah Bidang Kesiswaan dalam mengelola peserta didik.</p>
@@ -229,7 +229,7 @@
   </div>
 
   <div class="card">
-    <img src="image/disiplin.jpeg" alt="Disiplin">
+    <img src="disiplin.jpeg" alt="Disiplin">
     <div class="card-content">
       <h3>Tata Tertib dan Kedisiplinan</h3>
       <p>Tata tertib dan kedisiplinan siswa diterapkan untuk membentuk karakter yang baik.</p>
@@ -238,7 +238,7 @@
   </div>
 
   <div class="card">
-    <img src="image/hansek.jpeg" alt="Program">
+    <img src="hansek.jpeg" alt="Program">
     <div class="card-content">
       <h3>Program Unggulan Kedisiplinan Siswa</h3>
       <p>Program unggulan untuk menumbuhkan budaya disiplin melalui pembiasaan positif.</p>
@@ -248,7 +248,7 @@
 
   <!-- CARD INOVASI (DENGAN LINK) -->
   <div class="card">
-    <img src="image/inovasi.jpeg" alt="Inovasi">
+    <img src="inovasi.jpeg" alt="Inovasi">
     <div class="card-content">
       <h3>
         <a href="inovasi.html" class="card-link">Inovasi dan Kreativitas</a>
@@ -262,7 +262,7 @@
 
 <section class="school-info">
   <div class="logo-container" style="justify-content:center;">
-    <img src="image/smknew.png" alt="Logo" class="logo" style="width:60px;height:60px;">
+    <img src="smknew.png" alt="Logo" class="logo" style="width:60px;height:60px;">
     <h1>SMKN 10 Semarang</h1>
   </div>
 
@@ -298,3 +298,4 @@
 </body>
 
 </html>
+
